--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-	"token": "",
-    "ytapikey": "",
-	"prefix": ""
+	"token": "NjAyMDc1NzYwMzI4NzA0MDAw.XTLkzw.CrHSUgl2kVMnVXxqlQ6wp9r6GZo",
+    "ytapikey": "3play",
+	"prefix": "3"
 }
